# smileyCoinDev

./: .gitignore  .travis.yml  Makefile.am  autogen.sh  configure.ac
.github/workflows/: c-cpp.yml  smileycoin-ci.yml
build-aux/m4/: bitcoin_qt.m4  smileycoin_find_bdb53.m4
contrib/macdeploy/: custom_dsstore.py  detached-sig-create.sh  macdeployqtplus
contrib/seeds/: generate-seeds.py  nodes_main.txt
depends/: .gitignore  Makefile  config.site.in  funcs.mk
depends/hosts/: darwin.mk  linux.mk
doc/: README.md  build-freebsd.md  build-unix.md  smileycoin-conf.md
doc/release-notes/: release-notes-2.2.5.md
share/: setup.nsi
share/qt/: Info.plist
src/: Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  addrman.h  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bignum.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsseeds.h  checkpoints.cpp  clientversion.cpp  clientversion.h  core.cpp  core.h  core_io.h  core_read.cpp  core_write.cpp  crypter.cpp  crypter.h  db.cpp  hash.h  (+40 more)
src/bench/: .gitignore  bench_bitcoin.cpp  checkblock.cpp
src/compat/: assumptions.h  glibc_compat.cpp  glibc_sanity.cpp
src/config/: bitcoin-config.h.in
src/consensus/: consensus.h  params.h
src/crypto/: common.h  ripemd160.h  sha1.cpp  sha2.cpp
src/interfaces/: README.md
src/multialgo/: hashgroestl.h  hashqubit.h  hashskein.h
src/policy/: feerate.cpp
src/primitives/: block.cpp  block.h  transaction.h
src/qt/: Makefile.am  README.md  addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoin_locale.qrc  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  editaddressdialog.cpp  editservicedialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macnotificationhandler.mm  macos_appnap.mm  networkstyle.cpp  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  paymentrequest.proto  paymentrequestplus.cpp  paymentrequestplus.h  paymentserver.cpp  paymentserver.h  receivecoinsdialog.cpp  receivecoinsdialog.h  receiverequestdialog.cpp  receiverequestdialog.h  recentrequeststablemodel.cpp  rpcconsole.cpp  rpcconsole.h  (+20 more)
src/qt/forms/: coincontroldialog.ui  modaloverlay.ui  openuridialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  receiverequestdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af.ts  bitcoin_af_ZA.ts  bitcoin_am.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bg_BG.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cs_CZ.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_de_DE.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_en_AU.ts  bitcoin_en_GB.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_419.ts  bitcoin_es_AR.ts  bitcoin_es_CL.ts  bitcoin_es_CO.ts  bitcoin_es_DO.ts  bitcoin_es_ES.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_es_VE.ts  bitcoin_et.ts  bitcoin_et_EE.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fil.ts  bitcoin_fr.ts  (+69 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/test/: addressbooktests.cpp  apptests.cpp  paymentrequestdata.h  test_main.cpp  uritests.cpp  wallettests.cpp
src/rpc/: blockchain.cpp  client.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  rawtransaction.cpp  server.cpp  server.h  wallet.cpp
src/support/: cleanse.cpp  pagelocker.cpp  pagelocker.h
src/test/: DoS_tests.cpp  README.md  accounting_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base58_tests.cpp  bloom_tests.cpp  getarg_tests.cpp  hmac_tests.cpp  main_tests.cpp  miner_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  sha1_tests.cpp  sha2_tests.cpp  test_bitcoin.cpp  transaction_tests.cpp  uint256_tests.cpp
src/test/data/: README.md  script_valid.json
src/util/: system.cpp  system.h
src/wallet/: db.cpp  rpcdump.cpp  rpcwallet.cpp  wallet.h
src/wallet/test/: wallet_tests.cpp
test/: config.ini
